crates/jarl-cli/tests/integration/snapshots/integration__toml__exclude_empty_array.snap
---
source: crates/jarl-cli/tests/integration/toml.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").run().normalize_os_executable_name()"
---
success: false
exit_code: 1
----- stdout -----
test.R [1:0] any_is_na `any(is.na(...))` is inefficient. Use `anyNA(...)` instead.

Found 1 error.
1 fixable with the `--fix` option.

----- stderr -----

----- args -----
check .
