crates/jarl-cli/tests/integration/snapshots/integration__toml__exclude_with_default_exclude_false.snap
---
source: crates/jarl-cli/tests/integration/toml.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").run().normalize_os_executable_name()"
---
success: false
exit_code: 1
----- stdout -----
cpp11.R [1:0] any_is_na `any(is.na(...))` is inefficient. Use `anyNA(...)` instead.
normal.R [1:0] any_is_na `any(is.na(...))` is inefficient. Use `anyNA(...)` instead.

Found 2 errors.
2 fixable with the `--fix` option.

----- stderr -----

----- args -----
check .
