crates/jarl-cli/tests/integration/snapshots/integration__toml__invalid_toml_ignore_rule.snap
---
source: crates/jarl-cli/tests/integration/toml.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").run().normalize_os_executable_name().normalize_temp_paths()"
---
success: false
exit_code: 255
----- stdout -----

----- stderr -----
jarl failed
  Cause: Unknown rules in field `ignore` in 'jarl.toml': foo, bar

----- args -----
check .
